--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "client-install": "npm i --prefix client",
     "server": "nodemon server.js",
     "start": "node server.js",
-    "dev": "concurrently \" npm run server \" \" npm run client  \""
+    "dev": "concurrently \" npm run server \" \" npm run client  \"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "kiminohero",
   "license": "ISC",
